Add default-storage-engine attribute
Added attribute to override the default storage engine. Prior to MySQL
5.5 the default storage engine was MyISAM, in 5.5+ it is InnoDB. If the
default needs to be overriden for some reason, this new attribute will
allow that.

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -55,6 +55,10 @@ skip-external-locking
 skip-name-resolve
 <%- end %>
 
+<%- if node['mysql']['default-storage-engine'] %>
+default-storage-engine = <%= node['mysql']['default-storage-engine'] %> 
+<%- end %>
+
 # Charset and Collation
 character-set-server = <%= node['mysql']['tunable']['character-set-server'] %>
 collation-server     = <%= node['mysql']['tunable']['collation-server'] %>
