--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -47,6 +47,8 @@ user            = mysql
 pid-file        = <%= node['mysql']['server']['pid_file'] %>
 socket          = <%= node['mysql']['server']['socket'] %>
 port            = <%= node['mysql']['port'] %>
+<%# Fedora has a bug with basedir specified in my.cnf %>
+<%# See https://bugzilla.redhat.com/show_bug.cgi?id=1071705 %>
 <%- if node['platform_family'] != 'fedora' %>
 basedir         = <%= node['mysql']['server']['basedir'] %>
 <%- end %>
