--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -32,7 +32,28 @@
 #
 
 # Duplicate the config hash so we can modify it
-my_config_hash = node['rackspace_mysql']['config'].dup
+# Unfortunately .dup and .clone don't work; .dup is a shallow copy and .clone trips the read-only protection
+#  on the node class.  The node class has a to_hash method, but it is also a shallow copy.
+# Manually copy the hashes we need via a simple recursive copier
+def deep_copy_node(node_data)
+  begin
+    ret_val = {}
+    node_data.each do |key, value|
+      # Recurse to deep copy any iterables referenced
+      ret_val[key] = deep_copy_node(value)
+    end
+    return ret_val
+  rescue NoMethodError
+    # This is thrown when the object doesn't support .each
+    return node_data
+  end
+end
+my_config_hash = deep_copy_node(node['rackspace_mysql']['config'])
+
+-%>
+DEBUG:
+<%= my_config_hash -%>
+<%
 
 #
 # Define some helper functions
@@ -51,30 +72,30 @@ def add_and_delete_option(option_name, block_name, my_config_hash, optional = fa
   ret_val = _add_single_option(option_name, block_name, my_config_hash, optional)
   # Delete the key fron the config hash so we can use a simple iterator for the remaining options
   my_config_hash[block_name].delete(option_name)
+
+  return ret_val
 end
 
 # add_all_options: Add all options in the specified block
 # Errors if any mandatory options are not found, mandatory_options is an array of option names
 def add_all_options(block_name, my_config_hash, mandatory_options)
   ret_val = ""
-  # Sort all the keys the loops so that we don't have issues with Chef changing the files
-  #   due to the loop ordering changing.  Otherwise the order could change between runs
-  #   due to hashes being inherently unordered causing unnecessairy file changes and associated
-  #   service restarts.
-
   # Include the mandatory options first
-  mandatory_options.keys.sorted.each do |option_name|
+  # The ordering on this array should be static
+  mandatory_options.each do |option_name|
     ret_val << add_and_delete_option(option_name, block_name, my_config_hash)
-    ret_val << "\n"
   end
 
   # Include any extra arguments
-  if my_config_hash[block_name].len > 0
+  if my_config_hash[block_name].length > 0
     ret_val << "\n# Extra Arguments\n"
 
-    my_config_hash[block_name].keys.sorted.each do |option_name|
+    # Sort all the keys the loops so that we don't have issues with Chef changing the files
+    #   due to the loop ordering changing.  Otherwise the order could change between runs
+    #   due to hashes being inherently unordered causing unnecessairy file changes and associated
+    #   service restarts.
+    my_config_hash[block_name].keys.sort.each do |option_name|
       ret_val << add_and_delete_option(option_name, block_name, my_config_hash)
-      ret_val << "\n"
     end
   end
   
@@ -90,7 +111,7 @@ def _add_single_option(option_name, block_name, my_config_hash, optional = false
 
   if option_inner_hash == nil
     if optional == true
-      return "# #{option_name}: Unset"
+      return "# #{option_name}: Unset\n"
     else
       fail "ERROR: Mandatory config option #{block_name}:#{option_name} not specified!"
     end
@@ -109,11 +130,11 @@ def _add_single_option(option_name, block_name, my_config_hash, optional = false
       if option_inner_hash['value']
         ret_val << "#{option_name}\n"
       else
-        return "# #{option_name}: Disabled"
+        ret_val << "# #{option_name}: Disabled\n"
       end
     else
       # No 'value' key, default to enabled
-      return "#{option_name}"
+      ret_val << "#{option_name}\n"
     end      
 
   else
@@ -123,7 +144,7 @@ def _add_single_option(option_name, block_name, my_config_hash, optional = false
     if option_inner_hash['value'] == nil
       # Some logic to see if this is allowed
       if optional == true
-        return "# #{option_name}: Unset"
+        ret_val << "# #{option_name}: Unset\n"
       else
         fail "ERROR: Mandatory option #{block_name}:#{option_name} not specified!"
       end
@@ -144,16 +165,14 @@ end
 # especially if they contain "#" chars...
 # Remember to edit /etc/mysql/debian.cnf when changing the socket location.
 [client]
-<%= add_and_delete_option('socket', 'client', my_config_hash) %>
-<%= add_and_delete_option('port', 'client', my_config_hash) %>
+<%= add_all_options('client', my_config_hash, %w(socket port)) -%>
 
 # Here is entries for some specific programs
 # The following values assume you have at least 32M ram
 
 # This was formally known as [safe_mysqld]. Both versions are currently parsed.
 [mysqld_safe]
-<%= add_and_delete_option('socket', 'mysqld_safe', my_config_hash) %>
-<%= add_and_delete_option('nice', 'mysqld_safe', my_config_hash) %>
+<%= add_all_options('mysqld_safe', my_config_hash, %w(socket nice)) -%>
 
 [mysqld]
 #
@@ -169,8 +188,8 @@ end
 <%= add_and_delete_option('user', 'mysqld', my_config_hash) -%>
 <%= add_and_delete_option('pid_file', 'mysqld', my_config_hash) -%>
 
-<%= add_and_delete_option('socket', 'mysqld', my_config_hash) %>
-<%= add_and_delete_option('port', 'mysqld', my_config_hash) %>
+<%= add_and_delete_option('socket', 'mysqld', my_config_hash) -%>
+<%= add_and_delete_option('port', 'mysqld', my_config_hash) -%>
 <%= add_and_delete_option('basedir', 'mysqld', my_config_hash) -%>
 <%= add_and_delete_option('datadir', 'mysqld', my_config_hash) -%>
 <%= add_and_delete_option('tmpdir', 'mysqld', my_config_hash) -%>
@@ -197,6 +216,7 @@ if (my_config_hash['mysqld']['lc_messages_dir'] && my_config_hash['mysqld']['lc_
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
 <%= add_and_delete_option('bind-address', 'mysqld', my_config_hash) -%>
+
 #
 # * Fine Tuning
 #
@@ -268,11 +288,13 @@ add_and_delete_option('sql_mode', 'mysqld', my_config_hash, true) -%>
 # note: if you are setting up a replication slave, see README.Debian about
 #       other settings you may need to change.
 <%= add_and_delete_option('server-id', 'mysqld', my_config_hash, true) -%>
-<%- if my_config_hash['mysqld'].key?('log_bin') %>
-<%= add_and_delete_option('log_bin', 'mysqld', my_config_hash) -%>
-<%= add_and_delete_option('binlog_format', 'mysqld', my_config_hash) -%>
-<%= add_and_delete_option('log_slave_updates', 'mysqld', my_config_hash) -%>
-<%- end %>
+<%
+if my_config_hash['mysqld']['log_bin'] -%>
+# DEBUG DEBUG DEBUG
+<%# = add_and_delete_option('log_bin', 'mysqld', my_config_hash) -%>
+<%# = add_and_delete_option('binlog_format', 'mysqld', my_config_hash) -%>
+<%# = add_and_delete_option('log_slave_updates', 'mysqld', my_config_hash) -%>
+<% end %>
 <%= add_and_delete_option('log_bin_trust_function_creators', 'mysqld', my_config_hash, true) -%>
 
 <%-
@@ -294,12 +316,23 @@ read_only transaction-isolation slave_compressed_protocol binlog_do_db binlog_ig
 # InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
 # Read the manual for more InnoDB related options. There are many!
 # You might want to disable InnoDB to shrink the mysqld process by circa 100MB.
-#skip-innodb
+<%= add_and_delete_option('skip-innodb', 'mysqld', my_config_hash, true) -%>
 
-<%- if node['rackspace_mysql']['version'].to_f >= 5.5
-%w(innodb_write_io_threads innodb_io_capacity innodb_read_io_threads innodb_buffer_pool_instances).each do |option_name| -%>
+<%- 
+options=%w(innodb_write_io_threads innodb_io_capacity innodb_read_io_threads innodb_buffer_pool_instances)
+if node['rackspace_mysql']['version'].to_f >= 5.5
+  options.each do |option_name| -%>
 <%= add_and_delete_option(option_name, 'mysqld', my_config_hash) -%>
-<% end
+<%
+  end
+else -%>
+# MySQL version (<%= node['rackspace_mysql']['version'] %>) < 5.5
+# The following options are disabled:
+<%
+  options.each do |option_name| -%>
+# <%= add_and_delete_option(option_name, 'mysqld', my_config_hash) -%>
+<%
+  end
 end -%>
 
 ## InnoDB Plugin Independent Settings
@@ -313,7 +346,7 @@ innodb_flush_log_at_trx_commit).each do |option_name| -%>
 
 <%
 # Optional InnoDB options
-%(innodb_log_files_in_group innodb_status_file innodb_file_per_table skip-innodb-doublewrite innodb_flush_method
+%w(innodb_log_files_in_group innodb_status_file innodb_file_per_table skip-innodb-doublewrite innodb_flush_method
 innodb_log_buffer_size innodb_adaptive_flushing innodb_adaptive_flushing_method innodb_adaptive_checkpoint
 innodb_change_buffering innodb_doublewrite innodb_file_format innodb_data_home_dir).each do |option_name| -%>
 <%= add_and_delete_option(option_name, 'mysqld', my_config_hash, true) -%>
@@ -334,7 +367,7 @@ innodb_change_buffering innodb_doublewrite innodb_file_format innodb_data_home_d
 
 <%
 # Optional Security Features
-%(chroot safe_user_create secure_auth skip_symbolic_links secure_file_priv local_infile skip_show_database).each do |option_name| -%>
+%w(chroot safe_user_create secure_auth skip_symbolic_links secure_file_priv local_infile skip-show-database).each do |option_name| -%>
 <%= add_and_delete_option(option_name, 'mysqld', my_config_hash, true) -%>
 <% end -%>
 
@@ -369,14 +402,18 @@ innodb_change_buffering innodb_doublewrite innodb_file_format innodb_data_home_d
 <%= add_all_options('mysql', my_config_hash, []) -%>
 
 [myisamchk]
-<%= add_all_options('myisamchk', my_config_hash,
-                    %w(max_allowed_packet myisam_sort_buffer_size myisam_max_sort_file_size myisam_repair_threads myisam-recover)
-                   ) -%>
+# DEBUG
+<%
+# = add_all_options('myisamchk', my_config_hash,
+#                    %w(max_allowed_packet myisam_sort_buffer_size myisam_max_sort_file_size myisam_repair_threads myisam-recover)
+#                   ) 
+-%>
 
-<% if my_config_hash['directories']['confd_dir'] -%>
+# DEBUG
+<%# if my_config_hash['directories']['confd_dir'] -%>
 #
 # * IMPORTANT: Additional settings that can override those from this file!
 #   The files must end with '.cnf', otherwise they'll be ignored.
 #
-!includedir <%= my_config_hash['directories']['confd_dir'] %>/
-<% end -%>
+!includedir <%# = my_config_hash['directories']['confd_dir'] %>
+<%# end -%>
