Resolve value == false issue

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -70,12 +70,12 @@ my_config_hash = deep_copy_node(node['rackspace_mysql']['config'])
 # value_set: Return true if the hash has a value specified, false otherwise
 def value_set(option_name, block_name, my_config_hash)
   # Return false if the option is not set at all
-  unless my_config_hash[block_name][option_name]
+  if my_config_hash[block_name][option_name] == nil
     return false
   end
 
   # Return false if the option is set but value is not set
-  unless my_config_hash[block_name][option_name]['value']
+  if my_config_hash[block_name][option_name]['value'] == nil
     return false
   end
 
